src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NUMBER

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statement
Rule 2     statements -> statement statements
Rule 3     statement -> simple_assignment
Rule 4     statement -> array_declaration
Rule 5     statement -> array_assignment
Rule 6     statement -> type declaration_list SEMICOLON
Rule 7     statement -> const_declaration
Rule 8     simple_assignment -> ID EQUALS expression SEMICOLON
Rule 9     const_declaration -> CONST type ID EQUALS expression SEMICOLON
Rule 10    array_declaration -> type ID LBRACKET INTEGER RBRACKET SEMICOLON
Rule 11    declaration_list -> declaration
Rule 12    declaration_list -> declaration COMMA declaration_list
Rule 13    declaration -> ID
Rule 14    declaration -> ID EQUALS expression
Rule 15    declaration -> ID LBRACKET INTEGER RBRACKET
Rule 16    expression -> ID
Rule 17    expression -> FLOAT
Rule 18    expression -> INTEGER
Rule 19    expression -> CHAR
Rule 20    type -> INT_TYPE
Rule 21    type -> FLOAT_TYPE
Rule 22    type -> BOOL_TYPE
Rule 23    type -> CHAR_TYPE
Rule 24    expression -> term
Rule 25    term -> factor
Rule 26    factor -> INTEGER
Rule 27    expression -> expression OR expression
Rule 28    expression -> expression AND expression
Rule 29    expression -> expression EQ expression
Rule 30    expression -> expression NEQ expression
Rule 31    expression -> expression LT expression
Rule 32    expression -> expression GT expression
Rule 33    expression -> expression LTE expression
Rule 34    expression -> expression GTE expression
Rule 35    expression -> NOT expression
Rule 36    comparison -> LPAREN expression RPAREN
Rule 37    comparison -> INTEGER
Rule 38    factor -> comparison
Rule 39    factor -> ID
Rule 40    factor -> ID LBRACKET expression RBRACKET
Rule 41    array_assignment -> ID LBRACKET expression RBRACKET EQUALS expression SEMICOLON

Terminals, with rules where they appear

AND                  : 28
BOOL_TYPE            : 22
CHAR                 : 19
CHAR_TYPE            : 23
COMMA                : 12
CONST                : 9
EQ                   : 29
EQUALS               : 8 9 14 41
FLOAT                : 17
FLOAT_TYPE           : 21
GT                   : 32
GTE                  : 34
ID                   : 8 9 10 13 14 15 16 39 40 41
INTEGER              : 10 15 18 26 37
INT_TYPE             : 20
LBRACKET             : 10 15 40 41
LPAREN               : 36
LT                   : 31
LTE                  : 33
NEQ                  : 30
NOT                  : 35
NUMBER               : 
OR                   : 27
RBRACKET             : 10 15 40 41
RPAREN               : 36
SEMICOLON            : 6 8 9 10 41
error                : 

Nonterminals, with rules where they appear

array_assignment     : 5
array_declaration    : 4
comparison           : 38
const_declaration    : 7
declaration          : 11 12
declaration_list     : 6 12
expression           : 8 9 14 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 36 40 41 41
factor               : 25
simple_assignment    : 3
statement            : 1 2
statements           : 2 0
term                 : 24
type                 : 6 9 10

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statement
    (2) statements -> . statement statements
    (3) statement -> . simple_assignment
    (4) statement -> . array_declaration
    (5) statement -> . array_assignment
    (6) statement -> . type declaration_list SEMICOLON
    (7) statement -> . const_declaration
    (8) simple_assignment -> . ID EQUALS expression SEMICOLON
    (10) array_declaration -> . type ID LBRACKET INTEGER RBRACKET SEMICOLON
    (41) array_assignment -> . ID LBRACKET expression RBRACKET EQUALS expression SEMICOLON
    (20) type -> . INT_TYPE
    (21) type -> . FLOAT_TYPE
    (22) type -> . BOOL_TYPE
    (23) type -> . CHAR_TYPE
    (9) const_declaration -> . CONST type ID EQUALS expression SEMICOLON

    ID              shift and go to state 8
    INT_TYPE        shift and go to state 9
    FLOAT_TYPE      shift and go to state 10
    BOOL_TYPE       shift and go to state 11
    CHAR_TYPE       shift and go to state 12
    CONST           shift and go to state 13

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    simple_assignment              shift and go to state 3
    array_declaration              shift and go to state 4
    array_assignment               shift and go to state 5
    type                           shift and go to state 6
    const_declaration              shift and go to state 7

state 1

    (0) S' -> statements .



state 2

    (1) statements -> statement .
    (2) statements -> statement . statements
    (1) statements -> . statement
    (2) statements -> . statement statements
    (3) statement -> . simple_assignment
    (4) statement -> . array_declaration
    (5) statement -> . array_assignment
    (6) statement -> . type declaration_list SEMICOLON
    (7) statement -> . const_declaration
    (8) simple_assignment -> . ID EQUALS expression SEMICOLON
    (10) array_declaration -> . type ID LBRACKET INTEGER RBRACKET SEMICOLON
    (41) array_assignment -> . ID LBRACKET expression RBRACKET EQUALS expression SEMICOLON
    (20) type -> . INT_TYPE
    (21) type -> . FLOAT_TYPE
    (22) type -> . BOOL_TYPE
    (23) type -> . CHAR_TYPE
    (9) const_declaration -> . CONST type ID EQUALS expression SEMICOLON

    $end            reduce using rule 1 (statements -> statement .)
    ID              shift and go to state 8
    INT_TYPE        shift and go to state 9
    FLOAT_TYPE      shift and go to state 10
    BOOL_TYPE       shift and go to state 11
    CHAR_TYPE       shift and go to state 12
    CONST           shift and go to state 13

    statement                      shift and go to state 2
    statements                     shift and go to state 14
    simple_assignment              shift and go to state 3
    array_declaration              shift and go to state 4
    array_assignment               shift and go to state 5
    type                           shift and go to state 6
    const_declaration              shift and go to state 7

state 3

    (3) statement -> simple_assignment .

    ID              reduce using rule 3 (statement -> simple_assignment .)
    INT_TYPE        reduce using rule 3 (statement -> simple_assignment .)
    FLOAT_TYPE      reduce using rule 3 (statement -> simple_assignment .)
    BOOL_TYPE       reduce using rule 3 (statement -> simple_assignment .)
    CHAR_TYPE       reduce using rule 3 (statement -> simple_assignment .)
    CONST           reduce using rule 3 (statement -> simple_assignment .)
    $end            reduce using rule 3 (statement -> simple_assignment .)


state 4

    (4) statement -> array_declaration .

    ID              reduce using rule 4 (statement -> array_declaration .)
    INT_TYPE        reduce using rule 4 (statement -> array_declaration .)
    FLOAT_TYPE      reduce using rule 4 (statement -> array_declaration .)
    BOOL_TYPE       reduce using rule 4 (statement -> array_declaration .)
    CHAR_TYPE       reduce using rule 4 (statement -> array_declaration .)
    CONST           reduce using rule 4 (statement -> array_declaration .)
    $end            reduce using rule 4 (statement -> array_declaration .)


state 5

    (5) statement -> array_assignment .

    ID              reduce using rule 5 (statement -> array_assignment .)
    INT_TYPE        reduce using rule 5 (statement -> array_assignment .)
    FLOAT_TYPE      reduce using rule 5 (statement -> array_assignment .)
    BOOL_TYPE       reduce using rule 5 (statement -> array_assignment .)
    CHAR_TYPE       reduce using rule 5 (statement -> array_assignment .)
    CONST           reduce using rule 5 (statement -> array_assignment .)
    $end            reduce using rule 5 (statement -> array_assignment .)


state 6

    (6) statement -> type . declaration_list SEMICOLON
    (10) array_declaration -> type . ID LBRACKET INTEGER RBRACKET SEMICOLON
    (11) declaration_list -> . declaration
    (12) declaration_list -> . declaration COMMA declaration_list
    (13) declaration -> . ID
    (14) declaration -> . ID EQUALS expression
    (15) declaration -> . ID LBRACKET INTEGER RBRACKET

    ID              shift and go to state 16

    declaration_list               shift and go to state 15
    declaration                    shift and go to state 17

state 7

    (7) statement -> const_declaration .

    ID              reduce using rule 7 (statement -> const_declaration .)
    INT_TYPE        reduce using rule 7 (statement -> const_declaration .)
    FLOAT_TYPE      reduce using rule 7 (statement -> const_declaration .)
    BOOL_TYPE       reduce using rule 7 (statement -> const_declaration .)
    CHAR_TYPE       reduce using rule 7 (statement -> const_declaration .)
    CONST           reduce using rule 7 (statement -> const_declaration .)
    $end            reduce using rule 7 (statement -> const_declaration .)


state 8

    (8) simple_assignment -> ID . EQUALS expression SEMICOLON
    (41) array_assignment -> ID . LBRACKET expression RBRACKET EQUALS expression SEMICOLON

    EQUALS          shift and go to state 18
    LBRACKET        shift and go to state 19


state 9

    (20) type -> INT_TYPE .

    ID              reduce using rule 20 (type -> INT_TYPE .)


state 10

    (21) type -> FLOAT_TYPE .

    ID              reduce using rule 21 (type -> FLOAT_TYPE .)


state 11

    (22) type -> BOOL_TYPE .

    ID              reduce using rule 22 (type -> BOOL_TYPE .)


state 12

    (23) type -> CHAR_TYPE .

    ID              reduce using rule 23 (type -> CHAR_TYPE .)


state 13

    (9) const_declaration -> CONST . type ID EQUALS expression SEMICOLON
    (20) type -> . INT_TYPE
    (21) type -> . FLOAT_TYPE
    (22) type -> . BOOL_TYPE
    (23) type -> . CHAR_TYPE

    INT_TYPE        shift and go to state 9
    FLOAT_TYPE      shift and go to state 10
    BOOL_TYPE       shift and go to state 11
    CHAR_TYPE       shift and go to state 12

    type                           shift and go to state 20

state 14

    (2) statements -> statement statements .

    $end            reduce using rule 2 (statements -> statement statements .)


state 15

    (6) statement -> type declaration_list . SEMICOLON

    SEMICOLON       shift and go to state 21


state 16

    (10) array_declaration -> type ID . LBRACKET INTEGER RBRACKET SEMICOLON
    (13) declaration -> ID .
    (14) declaration -> ID . EQUALS expression
    (15) declaration -> ID . LBRACKET INTEGER RBRACKET

    LBRACKET        shift and go to state 22
    COMMA           reduce using rule 13 (declaration -> ID .)
    SEMICOLON       reduce using rule 13 (declaration -> ID .)
    EQUALS          shift and go to state 23


state 17

    (11) declaration_list -> declaration .
    (12) declaration_list -> declaration . COMMA declaration_list

    SEMICOLON       reduce using rule 11 (declaration_list -> declaration .)
    COMMA           shift and go to state 24


state 18

    (8) simple_assignment -> ID EQUALS . expression SEMICOLON
    (16) expression -> . ID
    (17) expression -> . FLOAT
    (18) expression -> . INTEGER
    (19) expression -> . CHAR
    (24) expression -> . term
    (27) expression -> . expression OR expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression EQ expression
    (30) expression -> . expression NEQ expression
    (31) expression -> . expression LT expression
    (32) expression -> . expression GT expression
    (33) expression -> . expression LTE expression
    (34) expression -> . expression GTE expression
    (35) expression -> . NOT expression
    (25) term -> . factor
    (26) factor -> . INTEGER
    (38) factor -> . comparison
    (39) factor -> . ID
    (40) factor -> . ID LBRACKET expression RBRACKET
    (36) comparison -> . LPAREN expression RPAREN
    (37) comparison -> . INTEGER

    ID              shift and go to state 25
    FLOAT           shift and go to state 27
    INTEGER         shift and go to state 28
    CHAR            shift and go to state 29
    NOT             shift and go to state 31
    LPAREN          shift and go to state 34

    expression                     shift and go to state 26
    term                           shift and go to state 30
    factor                         shift and go to state 32
    comparison                     shift and go to state 33

state 19

    (41) array_assignment -> ID LBRACKET . expression RBRACKET EQUALS expression SEMICOLON
    (16) expression -> . ID
    (17) expression -> . FLOAT
    (18) expression -> . INTEGER
    (19) expression -> . CHAR
    (24) expression -> . term
    (27) expression -> . expression OR expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression EQ expression
    (30) expression -> . expression NEQ expression
    (31) expression -> . expression LT expression
    (32) expression -> . expression GT expression
    (33) expression -> . expression LTE expression
    (34) expression -> . expression GTE expression
    (35) expression -> . NOT expression
    (25) term -> . factor
    (26) factor -> . INTEGER
    (38) factor -> . comparison
    (39) factor -> . ID
    (40) factor -> . ID LBRACKET expression RBRACKET
    (36) comparison -> . LPAREN expression RPAREN
    (37) comparison -> . INTEGER

    ID              shift and go to state 25
    FLOAT           shift and go to state 27
    INTEGER         shift and go to state 28
    CHAR            shift and go to state 29
    NOT             shift and go to state 31
    LPAREN          shift and go to state 34

    expression                     shift and go to state 35
    term                           shift and go to state 30
    factor                         shift and go to state 32
    comparison                     shift and go to state 33

state 20

    (9) const_declaration -> CONST type . ID EQUALS expression SEMICOLON

    ID              shift and go to state 36


state 21

    (6) statement -> type declaration_list SEMICOLON .

    ID              reduce using rule 6 (statement -> type declaration_list SEMICOLON .)
    INT_TYPE        reduce using rule 6 (statement -> type declaration_list SEMICOLON .)
    FLOAT_TYPE      reduce using rule 6 (statement -> type declaration_list SEMICOLON .)
    BOOL_TYPE       reduce using rule 6 (statement -> type declaration_list SEMICOLON .)
    CHAR_TYPE       reduce using rule 6 (statement -> type declaration_list SEMICOLON .)
    CONST           reduce using rule 6 (statement -> type declaration_list SEMICOLON .)
    $end            reduce using rule 6 (statement -> type declaration_list SEMICOLON .)


state 22

    (10) array_declaration -> type ID LBRACKET . INTEGER RBRACKET SEMICOLON
    (15) declaration -> ID LBRACKET . INTEGER RBRACKET

    INTEGER         shift and go to state 37


state 23

    (14) declaration -> ID EQUALS . expression
    (16) expression -> . ID
    (17) expression -> . FLOAT
    (18) expression -> . INTEGER
    (19) expression -> . CHAR
    (24) expression -> . term
    (27) expression -> . expression OR expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression EQ expression
    (30) expression -> . expression NEQ expression
    (31) expression -> . expression LT expression
    (32) expression -> . expression GT expression
    (33) expression -> . expression LTE expression
    (34) expression -> . expression GTE expression
    (35) expression -> . NOT expression
    (25) term -> . factor
    (26) factor -> . INTEGER
    (38) factor -> . comparison
    (39) factor -> . ID
    (40) factor -> . ID LBRACKET expression RBRACKET
    (36) comparison -> . LPAREN expression RPAREN
    (37) comparison -> . INTEGER

    ID              shift and go to state 25
    FLOAT           shift and go to state 27
    INTEGER         shift and go to state 28
    CHAR            shift and go to state 29
    NOT             shift and go to state 31
    LPAREN          shift and go to state 34

    expression                     shift and go to state 38
    term                           shift and go to state 30
    factor                         shift and go to state 32
    comparison                     shift and go to state 33

state 24

    (12) declaration_list -> declaration COMMA . declaration_list
    (11) declaration_list -> . declaration
    (12) declaration_list -> . declaration COMMA declaration_list
    (13) declaration -> . ID
    (14) declaration -> . ID EQUALS expression
    (15) declaration -> . ID LBRACKET INTEGER RBRACKET

    ID              shift and go to state 40

    declaration                    shift and go to state 17
    declaration_list               shift and go to state 39

state 25

    (16) expression -> ID .
    (39) factor -> ID .
    (40) factor -> ID . LBRACKET expression RBRACKET

  ! reduce/reduce conflict for SEMICOLON resolved using rule 16 (expression -> ID .)
  ! reduce/reduce conflict for OR resolved using rule 16 (expression -> ID .)
  ! reduce/reduce conflict for AND resolved using rule 16 (expression -> ID .)
  ! reduce/reduce conflict for EQ resolved using rule 16 (expression -> ID .)
  ! reduce/reduce conflict for NEQ resolved using rule 16 (expression -> ID .)
  ! reduce/reduce conflict for LT resolved using rule 16 (expression -> ID .)
  ! reduce/reduce conflict for GT resolved using rule 16 (expression -> ID .)
  ! reduce/reduce conflict for LTE resolved using rule 16 (expression -> ID .)
  ! reduce/reduce conflict for GTE resolved using rule 16 (expression -> ID .)
  ! reduce/reduce conflict for RBRACKET resolved using rule 16 (expression -> ID .)
  ! reduce/reduce conflict for COMMA resolved using rule 16 (expression -> ID .)
  ! reduce/reduce conflict for RPAREN resolved using rule 16 (expression -> ID .)
    SEMICOLON       reduce using rule 16 (expression -> ID .)
    OR              reduce using rule 16 (expression -> ID .)
    AND             reduce using rule 16 (expression -> ID .)
    EQ              reduce using rule 16 (expression -> ID .)
    NEQ             reduce using rule 16 (expression -> ID .)
    LT              reduce using rule 16 (expression -> ID .)
    GT              reduce using rule 16 (expression -> ID .)
    LTE             reduce using rule 16 (expression -> ID .)
    GTE             reduce using rule 16 (expression -> ID .)
    RBRACKET        reduce using rule 16 (expression -> ID .)
    COMMA           reduce using rule 16 (expression -> ID .)
    RPAREN          reduce using rule 16 (expression -> ID .)
    LBRACKET        shift and go to state 41

  ! SEMICOLON       [ reduce using rule 39 (factor -> ID .) ]
  ! OR              [ reduce using rule 39 (factor -> ID .) ]
  ! AND             [ reduce using rule 39 (factor -> ID .) ]
  ! EQ              [ reduce using rule 39 (factor -> ID .) ]
  ! NEQ             [ reduce using rule 39 (factor -> ID .) ]
  ! LT              [ reduce using rule 39 (factor -> ID .) ]
  ! GT              [ reduce using rule 39 (factor -> ID .) ]
  ! LTE             [ reduce using rule 39 (factor -> ID .) ]
  ! GTE             [ reduce using rule 39 (factor -> ID .) ]
  ! RBRACKET        [ reduce using rule 39 (factor -> ID .) ]
  ! COMMA           [ reduce using rule 39 (factor -> ID .) ]
  ! RPAREN          [ reduce using rule 39 (factor -> ID .) ]


state 26

    (8) simple_assignment -> ID EQUALS expression . SEMICOLON
    (27) expression -> expression . OR expression
    (28) expression -> expression . AND expression
    (29) expression -> expression . EQ expression
    (30) expression -> expression . NEQ expression
    (31) expression -> expression . LT expression
    (32) expression -> expression . GT expression
    (33) expression -> expression . LTE expression
    (34) expression -> expression . GTE expression

    SEMICOLON       shift and go to state 42
    OR              shift and go to state 43
    AND             shift and go to state 44
    EQ              shift and go to state 45
    NEQ             shift and go to state 46
    LT              shift and go to state 47
    GT              shift and go to state 48
    LTE             shift and go to state 49
    GTE             shift and go to state 50


state 27

    (17) expression -> FLOAT .

    SEMICOLON       reduce using rule 17 (expression -> FLOAT .)
    OR              reduce using rule 17 (expression -> FLOAT .)
    AND             reduce using rule 17 (expression -> FLOAT .)
    EQ              reduce using rule 17 (expression -> FLOAT .)
    NEQ             reduce using rule 17 (expression -> FLOAT .)
    LT              reduce using rule 17 (expression -> FLOAT .)
    GT              reduce using rule 17 (expression -> FLOAT .)
    LTE             reduce using rule 17 (expression -> FLOAT .)
    GTE             reduce using rule 17 (expression -> FLOAT .)
    RBRACKET        reduce using rule 17 (expression -> FLOAT .)
    COMMA           reduce using rule 17 (expression -> FLOAT .)
    RPAREN          reduce using rule 17 (expression -> FLOAT .)


state 28

    (18) expression -> INTEGER .
    (26) factor -> INTEGER .
    (37) comparison -> INTEGER .

  ! reduce/reduce conflict for SEMICOLON resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for OR resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for AND resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for EQ resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for NEQ resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for LT resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for GT resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for LTE resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for GTE resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for RBRACKET resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for COMMA resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for RPAREN resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for SEMICOLON resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for OR resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for AND resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for EQ resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for NEQ resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for LT resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for GT resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for LTE resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for GTE resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for RBRACKET resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for COMMA resolved using rule 18 (expression -> INTEGER .)
  ! reduce/reduce conflict for RPAREN resolved using rule 18 (expression -> INTEGER .)
    SEMICOLON       reduce using rule 18 (expression -> INTEGER .)
    OR              reduce using rule 18 (expression -> INTEGER .)
    AND             reduce using rule 18 (expression -> INTEGER .)
    EQ              reduce using rule 18 (expression -> INTEGER .)
    NEQ             reduce using rule 18 (expression -> INTEGER .)
    LT              reduce using rule 18 (expression -> INTEGER .)
    GT              reduce using rule 18 (expression -> INTEGER .)
    LTE             reduce using rule 18 (expression -> INTEGER .)
    GTE             reduce using rule 18 (expression -> INTEGER .)
    RBRACKET        reduce using rule 18 (expression -> INTEGER .)
    COMMA           reduce using rule 18 (expression -> INTEGER .)
    RPAREN          reduce using rule 18 (expression -> INTEGER .)

  ! SEMICOLON       [ reduce using rule 26 (factor -> INTEGER .) ]
  ! OR              [ reduce using rule 26 (factor -> INTEGER .) ]
  ! AND             [ reduce using rule 26 (factor -> INTEGER .) ]
  ! EQ              [ reduce using rule 26 (factor -> INTEGER .) ]
  ! NEQ             [ reduce using rule 26 (factor -> INTEGER .) ]
  ! LT              [ reduce using rule 26 (factor -> INTEGER .) ]
  ! GT              [ reduce using rule 26 (factor -> INTEGER .) ]
  ! LTE             [ reduce using rule 26 (factor -> INTEGER .) ]
  ! GTE             [ reduce using rule 26 (factor -> INTEGER .) ]
  ! RBRACKET        [ reduce using rule 26 (factor -> INTEGER .) ]
  ! COMMA           [ reduce using rule 26 (factor -> INTEGER .) ]
  ! RPAREN          [ reduce using rule 26 (factor -> INTEGER .) ]
  ! SEMICOLON       [ reduce using rule 37 (comparison -> INTEGER .) ]
  ! OR              [ reduce using rule 37 (comparison -> INTEGER .) ]
  ! AND             [ reduce using rule 37 (comparison -> INTEGER .) ]
  ! EQ              [ reduce using rule 37 (comparison -> INTEGER .) ]
  ! NEQ             [ reduce using rule 37 (comparison -> INTEGER .) ]
  ! LT              [ reduce using rule 37 (comparison -> INTEGER .) ]
  ! GT              [ reduce using rule 37 (comparison -> INTEGER .) ]
  ! LTE             [ reduce using rule 37 (comparison -> INTEGER .) ]
  ! GTE             [ reduce using rule 37 (comparison -> INTEGER .) ]
  ! RBRACKET        [ reduce using rule 37 (comparison -> INTEGER .) ]
  ! COMMA           [ reduce using rule 37 (comparison -> INTEGER .) ]
  ! RPAREN          [ reduce using rule 37 (comparison -> INTEGER .) ]


state 29

    (19) expression -> CHAR .

    SEMICOLON       reduce using rule 19 (expression -> CHAR .)
    OR              reduce using rule 19 (expression -> CHAR .)
    AND             reduce using rule 19 (expression -> CHAR .)
    EQ              reduce using rule 19 (expression -> CHAR .)
    NEQ             reduce using rule 19 (expression -> CHAR .)
    LT              reduce using rule 19 (expression -> CHAR .)
    GT              reduce using rule 19 (expression -> CHAR .)
    LTE             reduce using rule 19 (expression -> CHAR .)
    GTE             reduce using rule 19 (expression -> CHAR .)
    RBRACKET        reduce using rule 19 (expression -> CHAR .)
    COMMA           reduce using rule 19 (expression -> CHAR .)
    RPAREN          reduce using rule 19 (expression -> CHAR .)


state 30

    (24) expression -> term .

    SEMICOLON       reduce using rule 24 (expression -> term .)
    OR              reduce using rule 24 (expression -> term .)
    AND             reduce using rule 24 (expression -> term .)
    EQ              reduce using rule 24 (expression -> term .)
    NEQ             reduce using rule 24 (expression -> term .)
    LT              reduce using rule 24 (expression -> term .)
    GT              reduce using rule 24 (expression -> term .)
    LTE             reduce using rule 24 (expression -> term .)
    GTE             reduce using rule 24 (expression -> term .)
    RBRACKET        reduce using rule 24 (expression -> term .)
    COMMA           reduce using rule 24 (expression -> term .)
    RPAREN          reduce using rule 24 (expression -> term .)


state 31

    (35) expression -> NOT . expression
    (16) expression -> . ID
    (17) expression -> . FLOAT
    (18) expression -> . INTEGER
    (19) expression -> . CHAR
    (24) expression -> . term
    (27) expression -> . expression OR expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression EQ expression
    (30) expression -> . expression NEQ expression
    (31) expression -> . expression LT expression
    (32) expression -> . expression GT expression
    (33) expression -> . expression LTE expression
    (34) expression -> . expression GTE expression
    (35) expression -> . NOT expression
    (25) term -> . factor
    (26) factor -> . INTEGER
    (38) factor -> . comparison
    (39) factor -> . ID
    (40) factor -> . ID LBRACKET expression RBRACKET
    (36) comparison -> . LPAREN expression RPAREN
    (37) comparison -> . INTEGER

    ID              shift and go to state 25
    FLOAT           shift and go to state 27
    INTEGER         shift and go to state 28
    CHAR            shift and go to state 29
    NOT             shift and go to state 31
    LPAREN          shift and go to state 34

    expression                     shift and go to state 51
    term                           shift and go to state 30
    factor                         shift and go to state 32
    comparison                     shift and go to state 33

state 32

    (25) term -> factor .

    SEMICOLON       reduce using rule 25 (term -> factor .)
    OR              reduce using rule 25 (term -> factor .)
    AND             reduce using rule 25 (term -> factor .)
    EQ              reduce using rule 25 (term -> factor .)
    NEQ             reduce using rule 25 (term -> factor .)
    LT              reduce using rule 25 (term -> factor .)
    GT              reduce using rule 25 (term -> factor .)
    LTE             reduce using rule 25 (term -> factor .)
    GTE             reduce using rule 25 (term -> factor .)
    RBRACKET        reduce using rule 25 (term -> factor .)
    COMMA           reduce using rule 25 (term -> factor .)
    RPAREN          reduce using rule 25 (term -> factor .)


state 33

    (38) factor -> comparison .

    SEMICOLON       reduce using rule 38 (factor -> comparison .)
    OR              reduce using rule 38 (factor -> comparison .)
    AND             reduce using rule 38 (factor -> comparison .)
    EQ              reduce using rule 38 (factor -> comparison .)
    NEQ             reduce using rule 38 (factor -> comparison .)
    LT              reduce using rule 38 (factor -> comparison .)
    GT              reduce using rule 38 (factor -> comparison .)
    LTE             reduce using rule 38 (factor -> comparison .)
    GTE             reduce using rule 38 (factor -> comparison .)
    RBRACKET        reduce using rule 38 (factor -> comparison .)
    COMMA           reduce using rule 38 (factor -> comparison .)
    RPAREN          reduce using rule 38 (factor -> comparison .)


state 34

    (36) comparison -> LPAREN . expression RPAREN
    (16) expression -> . ID
    (17) expression -> . FLOAT
    (18) expression -> . INTEGER
    (19) expression -> . CHAR
    (24) expression -> . term
    (27) expression -> . expression OR expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression EQ expression
    (30) expression -> . expression NEQ expression
    (31) expression -> . expression LT expression
    (32) expression -> . expression GT expression
    (33) expression -> . expression LTE expression
    (34) expression -> . expression GTE expression
    (35) expression -> . NOT expression
    (25) term -> . factor
    (26) factor -> . INTEGER
    (38) factor -> . comparison
    (39) factor -> . ID
    (40) factor -> . ID LBRACKET expression RBRACKET
    (36) comparison -> . LPAREN expression RPAREN
    (37) comparison -> . INTEGER

    ID              shift and go to state 25
    FLOAT           shift and go to state 27
    INTEGER         shift and go to state 28
    CHAR            shift and go to state 29
    NOT             shift and go to state 31
    LPAREN          shift and go to state 34

    expression                     shift and go to state 52
    term                           shift and go to state 30
    factor                         shift and go to state 32
    comparison                     shift and go to state 33

state 35

    (41) array_assignment -> ID LBRACKET expression . RBRACKET EQUALS expression SEMICOLON
    (27) expression -> expression . OR expression
    (28) expression -> expression . AND expression
    (29) expression -> expression . EQ expression
    (30) expression -> expression . NEQ expression
    (31) expression -> expression . LT expression
    (32) expression -> expression . GT expression
    (33) expression -> expression . LTE expression
    (34) expression -> expression . GTE expression

    RBRACKET        shift and go to state 53
    OR              shift and go to state 43
    AND             shift and go to state 44
    EQ              shift and go to state 45
    NEQ             shift and go to state 46
    LT              shift and go to state 47
    GT              shift and go to state 48
    LTE             shift and go to state 49
    GTE             shift and go to state 50


state 36

    (9) const_declaration -> CONST type ID . EQUALS expression SEMICOLON

    EQUALS          shift and go to state 54


state 37

    (10) array_declaration -> type ID LBRACKET INTEGER . RBRACKET SEMICOLON
    (15) declaration -> ID LBRACKET INTEGER . RBRACKET

    RBRACKET        shift and go to state 55


state 38

    (14) declaration -> ID EQUALS expression .
    (27) expression -> expression . OR expression
    (28) expression -> expression . AND expression
    (29) expression -> expression . EQ expression
    (30) expression -> expression . NEQ expression
    (31) expression -> expression . LT expression
    (32) expression -> expression . GT expression
    (33) expression -> expression . LTE expression
    (34) expression -> expression . GTE expression

    COMMA           reduce using rule 14 (declaration -> ID EQUALS expression .)
    SEMICOLON       reduce using rule 14 (declaration -> ID EQUALS expression .)
    OR              shift and go to state 43
    AND             shift and go to state 44
    EQ              shift and go to state 45
    NEQ             shift and go to state 46
    LT              shift and go to state 47
    GT              shift and go to state 48
    LTE             shift and go to state 49
    GTE             shift and go to state 50


state 39

    (12) declaration_list -> declaration COMMA declaration_list .

    SEMICOLON       reduce using rule 12 (declaration_list -> declaration COMMA declaration_list .)


state 40

    (13) declaration -> ID .
    (14) declaration -> ID . EQUALS expression
    (15) declaration -> ID . LBRACKET INTEGER RBRACKET

    COMMA           reduce using rule 13 (declaration -> ID .)
    SEMICOLON       reduce using rule 13 (declaration -> ID .)
    EQUALS          shift and go to state 23
    LBRACKET        shift and go to state 56


state 41

    (40) factor -> ID LBRACKET . expression RBRACKET
    (16) expression -> . ID
    (17) expression -> . FLOAT
    (18) expression -> . INTEGER
    (19) expression -> . CHAR
    (24) expression -> . term
    (27) expression -> . expression OR expression
    (28) expression -> . expression AND expression
    (29) expression -> . expression EQ expression
    (30) expression -> . expression NEQ expression
    (31) expression -> . expression LT expression
    (32) expression -> . expression GT expression
    (33) expression -> . expression LTE expression
    (34) expression -> . expression GTE expression
    (35) expression -> . NOT expression
    (25) term -> . factor
    (26) factor -> . INTEGER
    (38) factor -> . comparison
    (39) factor -> . ID
    (40) factor -> . ID LBRACKET expression RBRACKET
    (36) comparison -> . LPAREN expression RPAREN
    (37) comparison -> . INTEGER

    ID              shift and go to state 25
    FLOAT           shift and go to state 27
    INTEGER         shift and go to state 28
    CHAR            shift and go to state 29
    NOT             shift and go to state 31
    LPAREN          shift and go to state 34

    expression                     shift and go to state 57
    term                           shift and go to state 30
    factor                         shift and go to state 32
    comparison                     shift and go to state 33

state 42

    (8) simple_assignment -> ID EQUALS expression SEMICOLON .

    ID              reduce using rule 8 (simple_assignment -> ID EQUALS expression SEMICOLON .)
    INT_TYPE        reduce using rule 8 (simple_assignment -> ID EQUALS expression SEMICOLON .)
    FLOAT_TYPE      reduce using rule 8 (simple_assignment -> ID EQUALS expression SEMICOLON .)
    BOOL_TYPE       reduce using rule 8 (simple_assignment -> ID EQUALS expression SEMICOLON .)
    CHAR_TYPE       reduce using rule 8 (simple_assignment -> ID EQUALS expression SEMICOLON .)
    CONST           reduce using rule 8 (simple_assignment -> ID EQUALS expression SEMICOLON .)
    $end            reduce using rule 8 (simple_assignment -> ID EQUALS expression SEMICOLON .)


state 43
